--- a/exec/assets/css/style.css
+++ b/exec/assets/css/style.css
@@ -35,7 +35,8 @@ a:hover{
 }
 
 .table {
-    width: 700px;
+    width: 80%;
+    max-width: 850px;
     margin: auto;
     /* bottom: 0;
     position: absolute;
