--- a/exec/assets/css/style.css
+++ b/exec/assets/css/style.css
@@ -32,6 +32,7 @@ a:hover{
     font-weight: 900;
     font-size: 70%;
     text-decoration: underline;
+    z-index: 999;
 }
 
 .table {
@@ -42,15 +43,16 @@ a:hover{
     position: absolute;
     left: 50%;
     transform: translateX(-50%); */
-    height: 100vh;
+    min-height: 120vh;
     border: 1px solid;
     padding: var(--spacing-l);
     border-width: 0 1px 0 1px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    /*! justify-content: flex-end; */
     box-sizing: border-box;
     gap: var(--spacing-m);
+    transform: rotate(180deg);
 }
 
 .table>div {
@@ -61,17 +63,28 @@ a:hover{
 
     
     
+    transform: rotate(180deg);
 }
 
 p {
     margin: var(--spacing-s);
     line-height: 1.3;
+    color: white;
 }
+
+.infos p {
+    color: gray !important;
+  }
 
 .infos {
     display: flex;
     justify-content: space-between;
     font-size: 70%;
+    opacity: 0.5;
+}
+
+.infos:hover {
+    opacity: 1;
 }
 
 .infos>p>span:nth-child(1) {
@@ -103,6 +116,7 @@ p {
     border-radius: 4px;
     margin: 30px auto 10px auto;
     text-decoration: none;
+    transform: rotate(180deg);
   }
 
   .table a:hover {
