--- a/exec/assets/css/style.css
+++ b/exec/assets/css/style.css
@@ -18,6 +18,7 @@ body {
 
 a, a:visited {
     color: inherit;
+    text-decoration: none ;
 }
 
 a:hover{
@@ -31,8 +32,12 @@ a:hover{
     transform: translateX(-50%);
     font-weight: 900;
     font-size: 70%;
-    text-decoration: underline;
     z-index: 999;
+}
+
+#vaecouter:hover{
+    text-decoration: underline;
+
 }
 
 .table {
@@ -83,7 +88,7 @@ p {
     opacity: 0.5;
 }
 
-.infos:hover {
+.table>div:hover .infos {
     opacity: 1;
 }
 
@@ -115,7 +120,6 @@ p {
     text-align: center;
     border-radius: 4px;
     margin: 30px auto 10px auto;
-    text-decoration: none;
     transform: rotate(180deg);
   }
 
