--- a/exec/assets/css/style.css
+++ b/exec/assets/css/style.css
@@ -114,13 +114,14 @@ p {
 
 .table a {
     
-    width: 80%;
+    width: 100%;
     padding: 15px var(--spacing-m);
     border: 1px solid grey;
     text-align: center;
     border-radius: 4px;
     margin: 30px auto 10px auto;
     transform: rotate(180deg);
+    box-sizing: border-box;
   }
 
   .table a:hover {
