--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,8 @@ html {
 
 body {
   margin: 10px;
-  font-size: 30px;
+  font-size: 1.3rem;
+  line-height: 1.6;
 }
 
 h1,
@@ -71,13 +72,19 @@ h2,
 h3,
 h4 {
   margin: 12px 0 0 0;
-  font-size: 30px;
+  font-size: 1rem;
+
+  /* display: inline; */
 }
 
 a {
   color: transparent;
   width: fit-content;
-  text-shadow: 0 0 4px #0000ff82;
+  text-shadow: 0 0 3px #0000ff82;
+  color: white;
+  /*! word-break: break-all; */
+  /*! word-wrap: initial; */
+  /*! word-spacing: 10px; */
 }
 
 a:hover {
@@ -94,10 +101,6 @@ ul {
   margin: 0;
 }
 
-#bio {
-  /*! pointer-events: none; */ 
-  /*! max-width: 800px; */
-}
 
 .list {
   display: grid;
@@ -117,7 +120,6 @@ ul {
 
 .content {
   display: none;
-  font-size: 30px;
 }
 
 .secret{
@@ -126,7 +128,7 @@ ul {
 }
 
 .slow {
-  display: block;
+  display: inline;
   visibility: visible;
   animation: slow 3s linear forwards;
 }
@@ -142,24 +144,35 @@ ul {
   }
 }
 
-img {
+.image {
   display: block;
   width: calc(100vw - 20px);
   position: absolute;
-  bottom: 10px;
+  bottom: 0px;
   z-index: -1;
-  max-height: calc(100vh - 20px);
+  max-height: calc(85vh - 20px);
+  z-index: 999;
+}
+
+.image img {
+  width: 100%;
+  max-height: 70vh;
+  object-fit: fill;
+}
+
+
+.enter {
+  display: inline;
 }
 
 #password {
-  font-size: 20px;
-  border-radius: 10px;
-  position: absolute;
-  right: 10px;
-  top: 10px;
   text-align: center;
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
+}
+
+::placeholder { /* Firefox 19+ */
+  opacity: 1;
 }
 
 /* -----------------------------------
