--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,7 @@ html {
 
 body {
   margin: 10px;
-  font-size: 1.3rem;
+  font-size: 1.1rem;
   line-height: 1.6;
 }
 
@@ -89,7 +89,7 @@ a {
 
 a:hover {
   text-shadow: 0 0 3px #0000ff82;
-  color: blue !important;
+  color: blue;
   text-decoration: underline;
 }
 
@@ -111,15 +111,26 @@ ul {
   color: gold;
 }
 
+#yellow:hover{
+  text-shadow: 0 0 3px rgba(255, 217, 0, 1);
+}
+
 #green{
   color: green;
+}
 
+#green:hover{
+  text-shadow: 0 0 3px rgba(0, 128, 0, 1);
 }
 
 #blue{
   color: red;
-
 }
+
+#blue:hover{
+  text-shadow: 0 0 3px rgba(255, 0, 0, 1);
+}
+
 
 .content {
   display: none;
