--- a/memoire/assets/css/style.css
+++ b/memoire/assets/css/style.css
@@ -1,4 +1,5 @@
 @import url(utility.css);
+@import url(options.css);
 
 :root {
     --color-background: #202020;
@@ -6,7 +7,7 @@
     --space-s: 8px;
     --space-m: 16px;
     --space-l: 24px;
-    --space-xl: 36px;
+    --space-xl: 3vw;
     --space-xxl: 48px;
 
     --font-std: Commonsans, sans-serif;
@@ -50,6 +51,15 @@ body {
     font-weight: 400;
 }
 
+a, a:active, a:visited, a:hover {
+    color: inherit;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 button {
     border-radius: var(--border-s);
     border: 1px solid var(--color-white-semi);
@@ -86,14 +96,14 @@ button {
     box-shadow: 0 0 44px 0 #2d2d2d;
 }
 
-.bookPageLeft {
+/* .bookPageLeft {
     position: relative;
     width: 5vw;
     display: flex;
     transition: var(--trans-quick);
 
     z-index: 4;
-}
+} */
 
 .bookPageRight {
     position: relative;
@@ -117,18 +127,49 @@ button {
     background-color: white;
 }
 
-
-h2 {
+h1 {
     margin: 0;
+    padding-top: var(--space-l);
+    margin-top: calc(-1 * var(--space-l));
     font-family: Commonsans, sans-serif;
     font-size: 52px;
     line-height: 1;
     font-weight: 400;
+    /* background-color: black;
+    color: white; */
+    border-radius: 11px;
+    font-style: italic;
+    /* text-shadow: 0 0 10px var(--color-background);
+    color: white; */
+}
+
+.sommairePage h2{
+    padding-top: var(--space-l);
+    margin-top: calc(-1 * var(--space-l));
+}
+
+h2 {
+    margin: 0;
+    padding-top: var(--space-l);
+    font-family: Commonsans, sans-serif;
+    font-size: 36px;
+    line-height: 1;
+    font-weight: 400;
+}
+
+h3 {
+    margin: 0;
+    padding-top: var(--space-l);
+    font-family: Commonsans, sans-serif;
+    font-size: 18px;
+    line-height: 24px;
+
+    font-weight: 600;
 }
 
 h4 {
     font-weight: 400;
-    margin: var(--space-l) 0 var(--space-s) 0;
+    margin: var(--space-l) 0 0 0;
 }
 
 p {
@@ -154,6 +195,8 @@ sup {
 section {
     position: relative;
 }
+
+
 
 /******************* CITATIONS *******************/
 .citation {
@@ -230,293 +273,4 @@ section {
     width: 3px;
     background-color: hsl(0deg 0% 0% / 10%);
     border-radius: 50px;
-}
-
-/******************* OPTIONS PAGE *******************/
-#optionsButton {
-    background-color: white;
-    top: 0;
-    right: 0;
-    height: 100%;
-    width: 25px;
-    text-align: right;
-    padding: 8px 4px;
-    box-sizing: border-box;
-    display: flex;
-
-    position: fixed;
-    z-index: 0;
-}
-
-.reduireRight {
-    transform: scaleX(0.9);
-    transform-origin: left;
-
-    transition: var(--trans-quick);
-}
-
-#optionsButton h3 {
-    font-weight: 400;
-    opacity: .6;
-    margin: 0;
-    width: 100%;
-    writing-mode: sideways-rl;
-    font-size: 16px;
-}
-
-.options:hover {
-    background-color: white;
-    opacity: .6;
-    width: 50vw;
-    z-index: 1;
-    position: absolute;
-    height: 100%;
-    right: 0;
-}
-
-.closer{
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 30px;
-    border-radius: 999px;
-    border: 1px solid var(--color-white-semi);
-    margin: var(--space-m);
-    text-align: center;
-}
-
-.optionsPage>span:nth-child(1) {
-    background-color: var(--color-background);
-    color: var(--color-white-semi);
-}
-
-.notesPage>span:nth-child(1) {
-    background-color: var(--color-borders);
-    color: var(--color-white-semi);
-}
-
-/******************* NOTE PAGE *******************/
-#notesButton {
-    background-color: white;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 25px;
-    text-align: left;
-    padding: 8px 4px;
-    box-sizing: border-box;
-    display: block;
-
-    position: fixed;
-    z-index: 0;
-}
-
-.reduireLeft {
-    transform: scaleX(0.9);
-    transform-origin: right;
-
-    transition: var(--trans-quick);
-}
-
-#notesButton h3 {
-    font-weight: 400;
-    opacity: .6;
-    margin: 0;
-    width: 100%;
-    writing-mode: sideways-rl;
-    font-size: 16px;
-    transform: rotate(180deg);
-}
-
-.notifNotes {
-    position: fixed;
-    left: calc(75vw - 5vw + 20px);
-    bottom: 0px;
-    transform: translate(-50%, 100%);
-    border: 1px solid var(--color-white-semi);
-    width: fit-content;
-    /* writing-mode: sideways-lr; */
-    font-size: 16px;
-    z-index: 999;
-    color: var(--color-background);
-    background-color: var(--color-borders);
-    padding: var(--space-s) var(--space-m);
-    border-radius: var(--border-s);
-
-    opacity: 0;
-    visibility: hidden;
-}
-
-.notifNotes:hover {
-    background-color: var(--color-borders-light);
-}
-
-.animateNotifNotes {
-    animation: goup 2s ease-in-out;
-}
-
-@keyframes goup {
-    0% {
-        opacity: 0;
-        visibility: visible;
-        transform: translate(-50%, 100%);
-    }
-
-    20% {
-        opacity: 1;
-        transform: translate(-50%, -50%);
-    }
-
-    70% {
-        opacity: 1;
-        transform: translate(-50%, -50%);
-    }
-
-    99% {
-        visibility: visible;
-    }
-
-    100% {
-        opacity: 0;
-        visibility: hidden;
-        transform: translate(-50%, -100%);
-    }
-}
-
-
-.notesPage {
-    width: calc(50vw - 5vw - 20px);
-    height: 100vh;
-    z-index: 999;
-    padding: var(--space-xl);
-    box-sizing: border-box;
-    z-index: 5;
-    position: fixed;
-    background-color: var(--color-borders);
-    left: 50vw;
-    transform: translateX(-100%);
-    /* box-shadow: inset -10px 0px 25px 0 #000; */
-    display: none;
-    overflow: scroll;
-}
-
-.notesPage .header {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    /* align-items: center; */
-    align-items: baseline;
-}
-
-.header div {
-    text-align: right;
-    display: flex;
-    flex-direction: column;
-    gap: 0;
-}
-
-.header small {
-    font-size: 10px;
-    opacity: 0.5;
-    line-height: 20px;
-}
-
-.header small:nth-child(1):hover {
-    cursor: pointer;
-    text-decoration: underline;
-}
-
-.header img {
-    height: 15px;
-    margin-left: 2px;
-}
-
-
-.littleNote {
-    margin: var(--space-s) 0;
-    padding: var(--space-s) var(--space-m);
-    border: 1px solid var(--color-borders);
-    background-color: var(--color-white-semi);
-    border-radius: var(--border-s);
-    font-size: 16px;
-}
-
-.littleNote:hover {
-    cursor: text;
-}
-
-.littleNote:hover div {
-    opacity: 1;
-    transition: var(--trans-quick);
-}
-
-.littleNote div {
-    margin: var(--space-s) 0;
-    padding: var(--space-s);
-    border: 1px solid var(--color-white-semi);
-    background-color: var(--color-borders);
-    height: 4px;
-    width: 10px;
-    border-radius: 999px;
-    margin-right: var(--space-s);
-    display: flex;
-    position: absolute;
-    align-content: center;
-    align-items: center;
-    justify-content: center;
-    z-index: 999;
-    
-    transition: var(--trans-quick);
-    opacity: 0;
-}
-
-.littleNote div:nth-child(1){
-    right: 14px;
-    margin-top: -4px;
-}
-
-.littleNote div:nth-child(2){
-    right: 14px;
-    margin-top: 22px;
-}
-
-.littleNote div img {
-  height: 13px;
-}
-
-.notesPage::-webkit-scrollbar {
-    width: 3px;
-}
-
-.notesPage::-webkit-scrollbar-track {
-    background: black;
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-}
-
-.notesPage::-webkit-scrollbar-thumb {
-    background: red;
-    border: 3px solid blue;
-}
-
-
-
-.optionsPage {
-    width: calc(50vw - 5vw - 20px);
-    height: fit-content;
-    z-index: 999;
-    padding: var(--space-xl);
-    box-sizing: border-box;
-    z-index: 5;
-    position: fixed;
-    background-color: var(--color-background);
-    color: var(--color-white-semi);
-    left: 50vw;
-    bottom: 0;
-    transform: translateX(-100%);
-    box-shadow: 0 0 44px 0 #2d2d2d;
-    display: none;
-    border-radius: var(--border-m) var(--border-m) 0 0;
-
-    transition: var(--trans-normal);
 }
