--- a/site-x-a/assets/css/style.css
+++ b/site-x-a/assets/css/style.css
@@ -23,9 +23,15 @@ span {
     height: 100vh;
     margin: auto;
     width: 100vw;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     font-size: 2rem;
 }
 
@@ -40,9 +46,16 @@ span {
 }
 
 .triple{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     margin: 300px auto 0 auto;
     width: 90%;
     height: 100vh;
@@ -50,30 +63,41 @@ span {
 }
 
 .triple div{
-    display: flex;
-    justify-content: space-between;
-    gap: 2vw;
+    display: grid;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    gap: 80px;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 .triple div:nth-child(1){
-    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
 }
 
 .triple div:nth-child(2){
-    transform: translateY(50%);
+    -webkit-transform: translateY(50%);
+        -ms-transform: translateY(50%);
+            transform: translateY(50%);
 }
 
 img {
     width: 100%;
     border-radius: 100%;
     border: 10px solid navy;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
     height: fit-content;
     aspect-ratio: 1;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
 
 iframe {
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     position: absolute;
     top: -5%;
     left: -5%;
@@ -84,8 +108,12 @@ iframe {
   }
 
   .dino div{
-    user-select: none;
-    touch-action: none;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+    -ms-touch-action: none;
+        touch-action: none;
     pointer-events: none;
     border-radius: 100%;
     border: 20px solid yellowgreen;
@@ -95,7 +123,8 @@ iframe {
     width: 100%;
     top: 0;
     left: 0;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
   }
 
 
@@ -110,6 +139,7 @@ iframe {
     border-radius: 100%;
     margin: 20px;
     padding: 20px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     overflow: hidden;
  }
