--- a/mirror/assets/css/style.css
+++ b/mirror/assets/css/style.css
@@ -33,17 +33,15 @@ body {
 
 .camera {
     z-index: 999;
-    height: 90vh;
+    height: calc(100% - 40px);
+    margin: 20px;
+    border: 20px solid yellowgreen;
+    border-radius: 100%;
+    overflow: hidden;
+    aspect-ratio: 1.3/2;
+    box-sizing: border-box;
 }
 
 #video {
-    border-radius: 100%;
-    border: 20px solid yellowgreen;
-    aspect-ratio: 1.3/2;
-    height: 100%;
-    width: 100%;
-    box-sizing: border-box;
     object-fit: cover;
-
-    filter: saturate(8);
 }
