--- a/memoire/assets/css/options.css
+++ b/memoire/assets/css/options.css
@@ -1,19 +1,44 @@
-/******************* SOMMAIRE PAGE *******************/
-.sideLeft {
-    background-color: white;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 25px;
-    text-align: left;
-    padding: 8px 4px;
-    box-sizing: border-box;
-    display: grid;
-
-    position: fixed;
-    z-index: 0;
+:root{
+    --background-sommaire: fuchsia;
+    --background-notes: gold;
+    --background-options: skyblue;
 }
 
+/******************* Right SIDE *******************/
+.sideRight {
+    background-color: white;
+    top: 0;
+    right: 0;
+    height: 100%;
+    position: fixed;
+    z-index: 0;
+    display: flex;
+    flex-direction: row-reverse;
+    margin-right: 20px;
+}
+
+.sideRight div {
+    font-weight: 400;
+    margin: 0;
+    width: 40px;
+    writing-mode: sideways-rl;
+    font-size: 16px;
+    transform: rotate(180deg);
+    height: 100%;
+    display: flex;
+    align-items: end;
+    box-sizing: border-box;
+    margin-right: -18px;
+    background-color: white;
+    box-shadow: 0 0 10px 0 #000;
+
+    padding-top: var(--space-m);
+    padding-left: 3px;
+    text-transform: uppercase;
+}
+
+
+/******************* LEFT SIDE *******************/
 .reduireLeft {
     transform: scaleX(0.9);
     transform-origin: right;
@@ -21,34 +46,90 @@
     transition: var(--trans-quick);
 }
 
-.sideLeft h3 {
+
+#sommaireButton {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: calc(100vh / 3);
+    z-index: 2;
+    border-radius: 0 10px 0 0;
+}
+
+.sommaireButtonOn {
+    z-index: 99 !important;
+    box-shadow: none !important;
+    background-color: var(--background-sommaire) !important;
+}
+
+#notesButton {
+    position: fixed;
+    top: calc(100vh / 3);
+    left: 0;
+    height: calc(100vh / 3);
+    z-index: 1;
+}
+
+.notesButtonOn {
+    z-index: 99 !important;
+    box-shadow: none !important;
+    background-color: var(--background-notes) !important;
+}
+
+#optionsButton {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    height: calc(100vh / 3);
+    z-index: 0;
+    border-radius: 0 0 10px 0;
+}
+
+.optionsButtonOn {
+    z-index: 99 !important;
+    box-shadow: none !important;
+    background-color: var(--background-options) !important;
+}
+
+.sideLeft {
+    width: 30px;
     font-weight: 400;
-    opacity: .6;
     margin: 0;
-    width: fit-content;
     writing-mode: sideways-rl;
     font-size: 16px;
     transform: rotate(180deg);
+    box-shadow: 3px 0 26px 0 #000;
+    border-radius: 0 10px 10px 0;
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    padding: var(--space-m) 0;
 }
 
-.sideLeft h3:nth-child(1){
-    text-align: right;
-}
+
+/******************* SOMMAIRE *******************/
 
 .sommairePage {
-    width: calc(50vw - 20px*2);
-    height: 100vh;
-    z-index: 999;
+    width: inherit;
+    height: 100%;
+    z-index: 5;
     padding: var(--space-xl);
     box-sizing: border-box;
-    z-index: 5;
-    position: fixed;
-    left: 20px;
-    /* box-shadow: inset -10px 0px 25px 0 #000; */
+    position: absolute;
+    left: 0;
+    top: 0;
     display: none;
     overflow: hidden;
-    /* background-color: var(--color-white); */
+    background-color: var(--background-sommaire);
 }
+
+
+
+.sommairePage h2 {
+    padding-top: var(--space-l);
+    margin-top: calc(-1 * var(--space-l));
+}
+
 
 .sommairePage h3 {
     margin: var(--space-l) 0 0 0;
@@ -127,16 +208,16 @@
 
 
 .notesPage {
-    width: calc(50vw - 20px*3);
-    height: 100vh;
-    z-index: 999;
+    width: inherit;
+    height: 100%;
+    z-index: 5;
     padding: var(--space-xl);
     box-sizing: border-box;
     z-index: 5;
-    position: fixed;
-    background-color: var(--color-borders);
-    left: 20px;
-    /* box-shadow: inset -10px 0px 25px 0 #000; */
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: var(--background-notes);
     display: none;
     overflow-y: hidden;
     overflow-x: hidden;
@@ -148,24 +229,6 @@
     justify-content: space-between;
     /* align-items: center; */
     align-items: baseline;
-}
-
-.header div {
-    text-align: right;
-    display: flex;
-    flex-direction: column;
-    gap: 0;
-}
-
-.header small {
-    font-size: 10px;
-    opacity: 0.5;
-    line-height: 20px;
-}
-
-.header small:nth-child(1):hover {
-    cursor: pointer;
-    text-decoration: underline;
 }
 
 .header img {
@@ -210,23 +273,23 @@
     align-items: center;
     justify-content: center;
     z-index: 999;
-    
+
     transition: var(--trans-quick);
     opacity: 0;
 }
 
-.littleNote div:nth-child(1){
+.littleNote div:nth-child(1) {
     right: 14px;
     margin-top: -4px;
 }
 
-.littleNote div:nth-child(2){
+.littleNote div:nth-child(2) {
     right: 14px;
     margin-top: 22px;
 }
 
 .littleNote div img {
-  height: 13px;
+    height: 13px;
 }
 
 .notesPage::-webkit-scrollbar {
@@ -246,35 +309,12 @@
 
 
 /******************* OPTIONS PAGE *******************/
-#optionsButton {
-    background-color: white;
-    top: 0;
-    right: 0;
-    height: 100%;
-    width: 25px;
-    text-align: right;
-    padding: 8px 4px;
-    box-sizing: border-box;
-    display: flex;
-
-    position: fixed;
-    z-index: 0;
-}
 
 .reduireRight {
     transform: scaleX(0.9);
     transform-origin: left;
 
     transition: var(--trans-quick);
-}
-
-#optionsButton h3 {
-    font-weight: 400;
-    opacity: .6;
-    margin: 0;
-    width: 100%;
-    writing-mode: sideways-rl;
-    font-size: 16px;
 }
 
 .options:hover {
@@ -287,7 +327,7 @@
     right: 0;
 }
 
-.closer{
+.closer {
     position: absolute;
     top: 0;
     right: 0;
@@ -310,21 +350,17 @@
 
 
 .optionsPage {
-    width: calc(50vw - 20px*3);
-    height: fit-content;
-    z-index: 999;
+    width: inherit;
+    height: 100%;
+    z-index: 5;
     padding: var(--space-xl);
     box-sizing: border-box;
     z-index: 5;
-    position: fixed;
-    background-color: var(--color-background);
-    color: var(--color-white-semi);
-    left: 20px;
-    bottom: 0;
-    /*! transform: translateX(-100%); */
-    box-shadow: 0 0 44px 0 #2d2d2d;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: var(--background-options);
     display: none;
-    border-radius: var(--border-m) var(--border-m) 0 0;
-
-    transition: var(--trans-normal);
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
