--- a/memoire/assets/css/options.css
+++ b/memoire/assets/css/options.css
@@ -5,21 +5,47 @@
 }
 
 /******************* Right SIDE *******************/
-.sideRight {
-    background-color: white;
-    top: 0;
-    right: 0;
-    height: 100%;
-    position: fixed;
-    z-index: 0;
-    display: flex;
-    flex-direction: row-reverse;
-    margin-right: 18px;
+
+#bookmarkPartieI{
+    right: 60px;
+    z-index: 3;
 }
 
-.sideRight div {
+.bookmarkPartieIOff{
+    left: 30px;
+    z-index: 3 !important;
+}
+
+#bookmarkPartieII{
+    right: 40px;
+    z-index: 2;
+}
+.bookmarkPartieIIOff{
+    left: 40px;
+    z-index: 4  !important;
+}
+
+#bookmarkPartieIII{
+    right: 20px;
+    z-index: 1;
+}
+.bookmarkPartieIIIOff{
+    left: 50px;
+    z-index: 5  !important;
+}
+
+#bookmarkPartieFin{
+    right: 0;
+    z-index: 0;
+}
+.bookmarkPartieFinOff{
+    left: 60px;
+    z-index: 6  !important;
+}
+
+
+.sideRight {
     font-weight: 400;
-    margin: 0;
     width: 40px;
     writing-mode: sideways-rl;
     font-size: 16px;
@@ -28,16 +54,22 @@
     display: flex;
     align-items: end;
     box-sizing: border-box;
-    margin-right: -18px;
-    background-color: white;
     box-shadow: 0 0 10px 0 #000;
 
+    height: 100%;
+    position: fixed;
+    display: flex;
+    margin: 0;
+    background-color: white;
+    top: 0;
+    
     padding-top: var(--space-m);
     padding-left: 3px;
     text-transform: uppercase;
+    z-index: 0;
 }
 
-.sideRight div:hover{
+.sideRight:hover{
     color: rgb(137, 137, 137);
 }
 
