--- a/memoire/assets/css/style.css
+++ b/memoire/assets/css/style.css
@@ -99,7 +99,7 @@ button {
 .book {
     display: flex;
     margin-left: 30px;
-    width: calc(100vw - 40px - 20px * 4);
+    width: calc(100vw - 30px - 20px * 4);
     background-color: white;
     z-index: 10;
     position: relative;
@@ -129,8 +129,8 @@ button {
 
 h1 {
     margin: 0;
-    padding-top: var(--space-l);
-    margin-top: calc(-1 * var(--space-l));
+    padding-top: var(--space-xl);
+    margin-top: calc(-1 * var(--space-xl));
     margin-bottom: var(--space-l);
     font-family: Commonsans, sans-serif;
     font-size: 52px;
