--- a/memoire/assets/css/options.css
+++ b/memoire/assets/css/options.css
@@ -1,4 +1,4 @@
-:root{
+:root {
     --background-sommaire: fuchsia;
     --background-notes: gold;
     --background-options: skyblue;
@@ -6,53 +6,60 @@
 
 /******************* Right SIDE *******************/
 
-#bookmarkPartieI{
+#bookmarkPartieI {
     right: 60px;
     z-index: 3;
 }
 
-.bookmarkPartieIOff{
+#bookmarkPartieIOff {
     left: 30px;
-    z-index: 3 !important;
+    z-index: 3;
+    display: none;
 }
 
-#bookmarkPartieII{
+#bookmarkPartieII {
     right: 40px;
     z-index: 2;
 }
-.bookmarkPartieIIOff{
+
+#bookmarkPartieIIOff {
     left: 40px;
-    z-index: 4  !important;
+    z-index: 4;
+    display: none;
 }
 
-#bookmarkPartieIII{
+#bookmarkPartieIII {
     right: 20px;
     z-index: 1;
 }
-.bookmarkPartieIIIOff{
+
+#bookmarkPartieIIIOff {
     left: 50px;
-    z-index: 5  !important;
+    z-index: 5;
+    display: none;
 }
 
-#bookmarkPartieFin{
+#bookmarkPartieFin {
     right: 0;
     z-index: 0;
 }
-.bookmarkPartieFinOff{
+
+#bookmarkPartieFinOff {
     left: 60px;
-    z-index: 6  !important;
+    z-index: 6;
+    display: none;
 }
 
 
-.sideRight {
+.bookmark {
     font-weight: 400;
-    width: 40px;
+    width: 100px;
     writing-mode: sideways-rl;
     font-size: 16px;
-    transform: rotate(180deg);
+    /*! transform: rotate(180deg); */
+    /* align-items: center; */
     height: 100%;
     display: flex;
-    align-items: end;
     box-sizing: border-box;
     box-shadow: 0 0 10px 0 #000;
 
@@ -62,86 +69,100 @@
     margin: 0;
     background-color: white;
     top: 0;
-    
+
     padding-top: var(--space-m);
-    padding-left: 3px;
+    padding-right: 8px;
     text-transform: uppercase;
     z-index: 0;
-}
-
-.sideRight:hover{
-    color: rgb(137, 137, 137);
-}
-
-
-/******************* LEFT SIDE *******************/
-.reduireLeft {
-    transform: scaleX(0.9);
-    transform-origin: right;
 
     transition: var(--trans-quick);
 }
 
+.bookmark:hover {
+    /* color: rgb(137, 137, 137);
+    background-color: red; */
+}
 
-#sommaireButton {
+
+/******************* LEFT SIDE *******************/
+.panel {
     position: fixed;
     top: 0;
     left: 0;
-    height: calc(100vh / 3);
-    z-index: 2;
-    border-radius: 0 10px 0 0;
-}
-
-.sommaireButtonOn {
-    z-index: 99 !important;
-    box-shadow: none !important;
-    background-color: var(--background-sommaire) !important;
-}
-
-#notesButton {
-    position: fixed;
-    top: calc(100vh / 3);
-    left: 0;
-    height: calc(100vh / 3);
-    z-index: 1;
-}
-
-.notesButtonOn {
-    z-index: 99 !important;
-    box-shadow: none !important;
-    background-color: var(--background-notes) !important;
-}
-
-#optionsButton {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    height: calc(100vh / 3);
     z-index: 0;
-    border-radius: 0 0 10px 0;
+    height: 100vh;
+    width: 400px;
+    display: flex;
+
+    transform: translateX(calc(-100% + 30px));
+    transition: var(--trans-quick);
 }
 
-.optionsButtonOn {
-    z-index: 99 !important;
-    box-shadow: none !important;
-    background-color: var(--background-options) !important;
+.displayed {
+    transform: translateX(calc(0px));
+    transition: var(--trans-quick);
+    z-index: 999;
 }
 
-.sideLeft {
+.panel>.header {
+    display: flex;
+    justify-content: space-between;
+    width: fit-content;
+    height: 100%;
+    flex-direction: column;
+}
+
+.panel>.header h3 {
     width: 30px;
+    height: calc(100% / 3);
     font-weight: 400;
     margin: 0;
-    writing-mode: sideways-rl;
     font-size: 16px;
-    transform: rotate(180deg);
-    box-shadow: 3px 0 26px 0 #000;
-    border-radius: 0 10px 10px 0;
     display: flex;
     align-items: center;
     box-sizing: border-box;
-    padding: var(--space-m) 0;
+    padding: var(--space-m);
+    background-color: white;
+    writing-mode: sideways-lr;
+    border-radius: 0 10px 10px 0;
+    box-shadow: -5px 0 20px 0 #000;
+
 }
 
+/* 
+.panel > .header h3:nth-child(1) {
+    border-radius: 0 10px 0 0;
+} */
+
+.panel>.content {
+    width: 100%;
+    z-index: 999;
+    background-color: white;
+    box-shadow: -5px 0 20px 0 #000;
+
+}
+
+
+.sommaireButtonOn {
+    z-index: 999 !important;
+    box-shadow: none !important;
+    background-color: var(--background-sommaire) !important;
+    color: transparent;
+}
+
+.notesButtonOn {
+    z-index: 999 !important;
+    box-shadow: none !important;
+    background-color: var(--background-notes) !important;
+    color: transparent;
+}
+
+.optionsButtonOn {
+    z-index: 999 !important;
+    box-shadow: none !important;
+    background-color: var(--background-options) !important;
+    color: transparent;
+}
 
 /******************* SOMMAIRE *******************/
 
@@ -149,17 +170,12 @@
     width: inherit;
     height: 100%;
     z-index: 5;
-    padding: var(--space-xl);
+    padding: var(--space-l);
     box-sizing: border-box;
-    position: absolute;
-    left: 0;
-    top: 0;
     display: none;
     overflow: hidden;
     background-color: var(--background-sommaire);
 }
-
-
 
 .sommairePage h2 {
     padding-top: var(--space-l);
@@ -176,10 +192,13 @@
     font-style: italic;
 }
 
+.indexSelected{
+    font-weight: 900;
+}
+
 .sommairePage ul {
     margin: 0 0 var(--space-s) var(--space-l);
 }
-
 
 .sommairePage summary {
     margin-left: var(--space-l)
@@ -247,16 +266,11 @@
     width: inherit;
     height: 100%;
     z-index: 5;
-    padding: var(--space-xl);
+    padding: var(--space-l);
     box-sizing: border-box;
     z-index: 5;
-    position: absolute;
-    left: 0;
-    top: 0;
     background-color: var(--background-notes);
     display: none;
-    overflow-y: hidden;
-    overflow-x: hidden;
 }
 
 .notesPage .header {
@@ -389,14 +403,9 @@
     width: inherit;
     height: 100%;
     z-index: 5;
-    padding: var(--space-xl);
+    padding: var(--space-l);
     box-sizing: border-box;
     z-index: 5;
-    position: absolute;
-    left: 0;
-    top: 0;
     background-color: var(--background-options);
     display: none;
-    overflow-y: hidden;
-    overflow-x: hidden;
 }
