--- a/memoire/assets/css/style.css
+++ b/memoire/assets/css/style.css
@@ -104,6 +104,8 @@ button {
     z-index: 10;
     position: relative;
     min-height: 100vh;
+
+    transition: var(--trans-quick);
 }
 
 .book>main {
@@ -121,7 +123,7 @@ button {
 .bookRight {
     width: 50%;
     height: 100%;
-    box-shadow: 0 0 44px 0 #2d2d2d;
+    box-shadow: 0 0 30px 0 #000;
     z-index: 10;
 }
 
@@ -142,9 +144,9 @@ h1 {
     /* text-shadow: 0 0 10px var(--color-background);
     color: white; */
 
-    transform: translateX(calc(-100% - var(--space-xl)*2));
+    /* transform: translateX(calc(-100% - var(--space-xl)*2));
     position: sticky;
-    top: 0;
+    top: 0; */
 
 }
 
