--- a/memoire/assets/css/options.css
+++ b/memoire/assets/css/options.css
@@ -1,7 +1,7 @@
 :root {
-    --background-sommaire: fuchsia;
-    --background-notes: gold;
-    --background-options: skyblue;
+    --background-sommaire: #c4c2bc;
+    --background-notes: #c4c2bc;
+    --background-options: #c4c2bc;
 }
 
 /******************* Right SIDE *******************/
@@ -116,18 +116,32 @@
     width: 30px;
     height: calc(100% / 3);
     font-weight: 400;
-    margin: 0;
     font-size: 16px;
     display: flex;
     align-items: center;
     box-sizing: border-box;
-    padding: var(--space-m);
+    padding: var(--space-s) 0;
     background-color: white;
     writing-mode: sideways-lr;
     border-radius: 0 10px 10px 0;
     box-shadow: -5px 0 20px 0 #000;
+}
+
+.panel>.header h3:hover {
+    background-color: var(--color-borders-light);
+}
+
+.panel .content div {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    overflow-y: scroll !important;
 
 }
+
+.panel .content div::-webkit-scrollbar {
+    display: none;
+}
+
 
 /* 
 .panel > .header h3:nth-child(1) {
@@ -137,9 +151,8 @@
 .panel>.content {
     width: 100%;
     z-index: 999;
-    background-color: white;
+    background-color: var(--background-sommaire);
     box-shadow: -5px 0 20px 0 #000;
-
 }
 
 
@@ -147,21 +160,27 @@
     z-index: 999 !important;
     box-shadow: none !important;
     background-color: var(--background-sommaire) !important;
-    color: transparent;
+    justify-content: center !important;
+    writing-mode: inherit !important;
+    padding: 0 !important;
 }
 
-.notesButtonOn {
-    z-index: 999 !important;
-    box-shadow: none !important;
-    background-color: var(--background-notes) !important;
-    color: transparent;
+
+.sommaireButtonOn span {
+    margin: 5px 5px 5px 0 !important;
 }
 
-.optionsButtonOn {
-    z-index: 999 !important;
-    box-shadow: none !important;
-    background-color: var(--background-options) !important;
-    color: transparent;
+
+.sommaireButtonOn:hover span {
+    width: 100% !important;
+    height: calc(100% - 10px) !important;
+    display: flex !important;
+    align-items: center !important;
+    box-sizing: border-box !important;
+    border-radius: 6px !important;
+    background-color: var(--color-white-semi) !important;
+    justify-content: center !important;
+    margin: 5px 5px 5px 0 !important;
 }
 
 /******************* SOMMAIRE *******************/
@@ -182,18 +201,26 @@
     margin-top: calc(-1 * var(--space-l));
 }
 
-
 .sommairePage h3 {
     margin: var(--space-l) 0 0 0;
     font-weight: 400;
 }
 
 .sommairePage h4 {
-    font-style: italic;
+    margin: 0 0 2px 0;
 }
 
-.indexSelected{
-    font-weight: 900;
+.sommairePage div {
+    border-radius: 10px;
+    margin: var(--space-m) 0;
+    padding: var(--space-s);
+    background-color: var(--color-white-semi);
+}
+
+.sommairePage div:nth-last-child(-n+1) {}
+
+.indexSelected {
+    background-color: var(--color-white) !important;
 }
 
 .sommairePage ul {
@@ -202,6 +229,20 @@
 
 .sommairePage summary {
     margin-left: var(--space-l)
+}
+
+
+
+.footer {
+    padding: var(--space-s) !important;
+    position: absolute;
+    bottom: 0;
+    font-size: var(--font-small);
+    margin: 0 !important;
+    background-color: var(--color-borders) !important;
+    border-radius: 0 !important;
+    border-width: 1px 0 0 0 !important;
+    border: 1px solid var(--color-white-semi);
 }
 
 
