--- a/memoire/assets/css/style.css
+++ b/memoire/assets/css/style.css
@@ -5,13 +5,17 @@
 :root {
     --color-background: #202020;
 
-    --space-s: 8px;
-    --space-m: 16px;
-    --space-l: 24px;
-    --space-xl: 3vw;
-    --space-xxl: 48px;
+    --space-s: 1vmax;
+    --space-m: 2vmax;
+    --space-l: 3vmax;
+    --space-xl: 4vmax;
+    --space-xxl: 5vmax;
 
     --font-std: Commonsans, sans-serif;
+
+    --font-small: 75%;
+    --font-normal: 18px;
+    --font-normal-lh: 24px;
 
     --font-spl: serif;
 
@@ -47,8 +51,8 @@ body {
     background-color: white;
     margin: 0;
 
-    font-size: 18px;
-    line-height: 24px;
+    font-size: var(--font-normal);
+    line-height: var(--font-normal-lh);
     font-weight: 400;
 }
 
@@ -62,6 +66,7 @@ a:hover {
 
 a:hover {
     text-decoration: underline;
+    cursor: pointer;
 }
 
 button {
@@ -127,8 +132,6 @@ button {
     z-index: 10;
 }
 
-
-
 h1 {
     margin: 0;
     padding-top: var(--space-xl);
@@ -158,6 +161,7 @@ h2 {
     font-size: 36px;
     line-height: 1;
     font-weight: 400;
+    padding-top: var(--space-l);
 }
 
 h3 {
@@ -172,7 +176,7 @@ h3 {
     font-weight: 600;
 }
 
-.bookRight h3{
+.bookRight h3 {
     position: sticky;
     top: 0;
     width: 100%;
@@ -187,24 +191,27 @@ h4 {
     margin: var(--space-l) 0 0 0;
 }
 
-p {
+p{
     text-indent: 15px;
 
 }
 
+.prgf {
+    padding-left: 15px;
+    display: inline;
+  }
+
 sup {
-    border: 1px solid var(--color-background);
-    border-radius: 100%;
     height: 12px;
-    width: 12px;
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    font-size: 9px;
+    font-size: 10px;
     font-family: var(--font-std);
     text-indent: 0;
     background-color: transparent;
     color: black;
+    font-weight: 900;
 }
 
 section {
@@ -213,12 +220,78 @@ section {
 
 
 /******************* SOMMAIRE PARTIES *******************/
+.titleAV{
+    height: calc(80vh - var(--space-xl)*2);
+    justify-content: center;
+    background-color: white;
+    color: black;
+    box-sizing: border-box;
+    aspect-ratio: 1/2;
+    padding: var(--space-l) !important;
+    box-shadow: 0 0 20px 0 white;
+    border-radius: 0 18px 18px 0;
+}
+
+.titleAV p{
+    text-align: center;
+}
+
+.supertitle{
+    text-align: center;
+    font-family: Commonsans, sans-serif;
+    font-size: 60px;
+    line-height: 1;
+    font-style: italic;
+}
+
+.avant-propos {
+    position: fixed;
+    z-index: 999;
+    width: 100vw;
+    background-color: black;
+    color: white;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    padding: var(--space-xxl);
+    box-sizing: border-box;
+    height: 100vh;
+    /*! padding-top: calc(var(--space-xxl)*1); */
+
+    display: none;
+}
+
+.avant-propos h1 {
+    margin-bottom: var(--space-s);
+}
+
+.avant-propos div {
+    max-width: 600px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    padding: var(--space-xxl);
+}
+
+.avant-propos p {
+    text-indent: 0 !important;
+}
+
+.avant-propos img {
+    width: 150%;
+    margin: auto;
+    margin-left: -25%;
+}
+
+.avant-propos a {
+    margin-top: var(--space-xl);
+}
 
 
 /******************* CITATIONS *******************/
 .citation {
     font-family: var(--font-spl);
-    padding: var(--space-l) calc(var(--space-l)*2);
+    padding: 0 var(--space-xl);
+margin: var(--space-xl) 0 var(--space-xxl) 0;
 }
 
 /******************* FOOTNOTE *******************/
@@ -226,6 +299,12 @@ section {
     cursor: context-menu;
     /* cursor: help; */
 }
+
+.footnote-anchor span{
+        border: 1px solid transparent;
+
+}
+
 
 .footnote {
     transform: translateX(calc(-100% - var(--space-xl)*2));
@@ -235,7 +314,6 @@ section {
     background: transparent;
     border-radius: var(--border-s);
     border: 1px solid transparent;
-
 }
 
 .footnote:hover {
@@ -263,7 +341,6 @@ section {
 
 .highlight {
     border: 1px solid var(--color-borders);
-
 }
 
 .highlight img {
@@ -271,7 +348,10 @@ section {
 }
 
 .highlight-text span {
-    background-color: yellow;
+    /* background-color: black; */
+    border-radius: 5px;
+    color: black;
+    border: 1px solid var(--color-borders);
 }
 
 /******************* PAGE SCROLLBAR *******************/
