--- a/memoire/assets/css/utility.css
+++ b/memoire/assets/css/utility.css
@@ -7,3 +7,10 @@
     cursor: pointer;
 }
 
+.underline{
+    text-decoration: underline !important;
+}
+
+.no-indent{
+    text-indent: 0 !important;
+}
