--- a/memoire/assets/css/style.css
+++ b/memoire/assets/css/style.css
@@ -1,6 +1,7 @@
 @import url(utility.css);
 @import url(options.css);
 @import url(parties.css);
+@import url(fonts.css);
 
 :root {
     --color-background: #202020;
@@ -61,7 +62,8 @@ a:active,
 a:visited,
 a:hover {
     color: inherit;
-    text-decoration: none;
+    text-decoration: underline;
+    text-decoration-style: dotted;
 }
 
 a:hover {
@@ -191,7 +193,7 @@ h4 {
     margin: var(--space-l) 0 0 0;
 }
 
-p{
+p {
     text-indent: 15px;
 
 }
@@ -199,7 +201,7 @@ p{
 .prgf {
     padding-left: 15px;
     display: inline;
-  }
+}
 
 sup {
     height: 12px;
@@ -214,13 +216,22 @@ sup {
     font-weight: 900;
 }
 
+.footnote sup{
+    margin-right: 3px !important;
+}
+
+.footnote-anchor sup{
+    margin-left: 3px !important;
+
+}
+
 section {
     position: relative;
 }
 
 
 /******************* SOMMAIRE PARTIES *******************/
-.titleAV{
+.titleAV {
     height: calc(80vh - var(--space-xl)*2);
     justify-content: center;
     background-color: white;
@@ -232,11 +243,11 @@ section {
     border-radius: 0 18px 18px 0;
 }
 
-.titleAV p{
+.titleAV p {
     text-align: center;
 }
 
-.supertitle{
+.supertitle {
     text-align: center;
     font-family: Commonsans, sans-serif;
     font-size: 60px;
@@ -291,7 +302,7 @@ section {
 .citation {
     font-family: var(--font-spl);
     padding: 0 var(--space-xl);
-margin: var(--space-xl) 0 var(--space-xxl) 0;
+    margin: var(--space-xl) 0 var(--space-xxl) 0;
 }
 
 /******************* FOOTNOTE *******************/
@@ -300,8 +311,8 @@ margin: var(--space-xl) 0 var(--space-xxl) 0;
     /* cursor: help; */
 }
 
-.footnote-anchor span{
-        border: 1px solid transparent;
+.footnote-anchor span {
+    border: 1px solid transparent;
 
 }
 
@@ -314,6 +325,8 @@ margin: var(--space-xl) 0 var(--space-xxl) 0;
     background: transparent;
     border-radius: var(--border-s);
     border: 1px solid transparent;
+    padding: var(--space-s);
+    box-sizing: border-box;
 }
 
 .footnote:hover {
@@ -328,13 +341,17 @@ margin: var(--space-xl) 0 var(--space-xxl) 0;
 .footnote span {
     font-size: 12px;
     word-break: normal;
-    padding: var(--space-s);
+    /*! padding-top: var(--space-s); */
     display: block;
+    line-height: 1.4;
 }
 
 .footnote img {
     width: 100%;
     filter: grayscale(1);
+    max-height: 300px;
+    object-fit: contain;
+    padding-bottom: var(--space-s);
 }
 
 /******************* HIGHLIGHT *******************/
